# legal-wizard

./: README.md  pyproject.toml  requirements.txt
legal_wizard/: download.py  main.py  parser.py  requisicoes.py  utils.py
