[tool.poetry]
name = "legal-wizard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "legal_wizard"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.3"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
